# small-projects

./: README.md
functional-type/: Cargo.toml
functional-type/.helix/: config.toml
functional-type/functional-type-macros/: Cargo.toml
functional-type/functional-type-macros/src/: generics.rs  lib.rs  where_clauses.rs
functional-type/src/: application.rs  bool.rs  invalid.rs  lib.rs  macros.rs  main.rs  operators.rs  type_traits.rs
functional-type/src/integer/: signed.rs  unsigned.rs
game-2048/: Cargo.toml  README.md
game-2048/src/: main.rs
game-of-life/: Cargo.toml  README.md
game-of-life/src/: main.rs  renderer.rs
meteo-rs/: Cargo.toml  cities.html  saint_hilaire.htm  saint_hilaire.htm.1
meteo-rs/src/: city.rs  forecast.rs  lib.rs  location.rs  main.rs
meteo-rs/src/impls/: meteo_parapente.rs  mod.rs
meteo-rs/src/impls/meteociel/: mod.rs
tcp-rust/: Cargo.toml  makefile  run.sh
tcp-rust/.helix/: config.toml
tcp-rust/src/: checksum.rs  icmp.rs  interface.rs  ip.rs  main.rs  packet.rs  tcp.rs  traits.rs  tun_tap.rs
tcp-rust/src/http/: mod.rs
tcp-rust/src/tcp/: manager.rs  mod.rs
topo/: Cargo.toml
topo/shaders/: shader.wgsl
topo/src/: lib.rs  main.rs
topo/src/render/: app.rs  mod.rs  msaa.rs  pipelines.rs  state.rs
topo/src/render/state/: init.rs
virtual-float/: Cargo.toml
virtual-float/apars-macros/: Cargo.toml
virtual-float/apars-macros/src/: lib.rs
virtual-float/apars-proc-macros/: Cargo.toml
virtual-float/src/: integer.rs  lib.rs  main.rs  natural.rs
virtual-float/tests/: integer.rs  natural.rs
(+11 files in other folders)
