[package]
name = "meteo-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
futures = "0.3.31"
reqwest = "0.12"
scraper = "0.23"
serde = { version = "1.0", features = [ "derive" ] }
serde-big-array = "0.5.1"
serde_json = "1.0"
tabled = "0.20"
tokio = { version = "1.47", features = [ "full" ] }
