[package]
name = "interface_rs"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = "1.24.0"
cgmath = { version = "0.18.0"}

crevice = {version = "0.18.0", features = ["cgmath"]}
noise = "0.9.0"
